--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,7 @@
-VITE_FIREBASE_API_KEY=AIzaSyCNC-IU_iDSuRyCCvj0kvse3AEQ7aF5yYU
-VITE_FIREBASE_AUTH_DOMAIN=nrd-bot-ea3f9.firebaseapp.com
-VITE_FIREBASE_DATABASE_URL=https://nrd-bot-ea3f9-default-rtdb.europe-west1.firebasedatabase.app
-VITE_FIREBASE_PROJECT_ID=nrd-bot-ea3f9
-VITE_FIREBASE_STORAGE_BUCKET=nrd-bot-ea3f9.firebasestorage.app
-VITE_FIREBASE_MESSAGING_SENDER_ID=93214958631
-VITE_FIREBASE_APP_ID=1:93214958631:web:eb226897397674f0305a02
+VITE_FIREBASE_API_KEY=AIzaSyB89HVTpVz1j8CjrTDhpN9gIGbpq3r9nQ8
+VITE_FIREBASE_AUTH_DOMAIN=nrd-rrhh-prod.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=nrd-rrhh-prod
+VITE_FIREBASE_STORAGE_BUCKET=nrd-rrhh-prod.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=937097019069
+VITE_FIREBASE_APP_ID=1:937097019069:web:bb956a64f574e74407c1d4
+VITE_FIREBASE_DATABASE_URL=https://nrd-rrhh-prod-default-rtdb.firebaseio.com/
